# uuid-v7-sample

./: PLAN.md  README.md  compose.yaml
.github/: renovate.json5
create/: CMakeLists.txt  Dockerfile  Dockerfile.dev  README.md  main.c
create/src/: CMakeLists.txt  Dockerfile
create/tests/: CMakeLists.txt  Dockerfile  test_parse_args_count.c  test_parse_args_count_eq.c  test_parse_args_count_error.c  test_parse_args_count_quoted.c  test_parse_args_count_short.c  test_parse_args_count_short_eq.c  test_parse_args_equals_reject.c  test_parse_args_help.c  test_parse_args_help_short.c  test_parse_args_short_combo.c  test_parse_args_version.c
generate/: CMakeLists.txt  README.md
generate/src/: CMakeLists.txt  Dockerfile  arg_parser.c  arg_parser.h  main.c  uuid_v7.c  uuid_v7.h
generate/tests/: CMakeLists.txt  Dockerfile  test_help.c  test_parse_args_count.c  test_parse_args_count_eq.c  test_parse_args_count_short.c  test_parse_args_count_short_eq.c  test_parse_args_help.c  test_parse_args_help_short.c  test_uuid_v7_chronological_order.c  test_uuid_v7_count.c  test_uuid_v7_format.c  test_uuid_v7_timestamp.c  test_version.c
